--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body{
     background-color: rgba(255,255,255);
 }
 .weather-body{
-    /* display: none; */
+    display: none;
     color: yellowgreen;
     padding: 30px;
     line-height: 2rem;
